simple/test/features/errors/semantic/e1079_missing_generic_arguments.spl
# E1079: Missing Generic Arguments

Feature: E1079 - Missing Generic Arguments for Type
  As a Simple compiler
  I want to detect when generic arguments are missing
  So that all required type parameters are provided

  Background:
    Given I have the Simple compiler

  Scenario: Generic type without arguments
    When I compile:
      '''
      struct Container<T>:
        value: T

      fn test():
        val c: Container = Container { value: 42 }  # Error: missing <T>
      '''
    Then I should see error E1079 at line 5
    And the error message should be "missing generic arguments for type `{type}`"
    And the label should indicate "missing generic arguments"
    And the help should suggest "provide all required generic arguments"

  Scenario: Valid generic type with arguments
    When I compile:
      '''
      struct Container<T>:
        value: T

      fn test():
        val c: Container<i32> = Container { value: 42 }  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      struct Container<T>:
        value: T

      fn test():
        val c: Container = Container { value: 42 }
      '''
    Then I should see error E1079
    And the error message should contain "제네릭 인자 누락"
